docs: Add Logic component

--- a/src/Styles/_partials/_variables.scss
+++ b/src/Styles/_partials/_variables.scss
@@ -2,6 +2,9 @@
 $mercy-color-1: #0f9ed5;
 $mercy-color-2: #cfebf6;
 
+// Font size
+$mercy-font-size-1: 1.6rem;
+
 /* Button Colours */
 $btn-color-1: #FFDADF;
 $btn-color-2: #FDCAB9;
