--- a/src/Styles/_compiled/mobile.css
+++ b/src/Styles/_compiled/mobile.css
@@ -1,4 +1,11 @@
 @media screen and (max-width: 1000px) {
+  .dashboard-buttons {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .btn {
+    width: 100%;
+    min-width: 150px;
+  }
   .sidebar {
     display: none;
   }
