--- a/src/Styles/_compiled/style.css
+++ b/src/Styles/_compiled/style.css
@@ -1,3 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+/* Button Colours */
+html, body {
+  font-family: "Roboto", sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 700 !important;
+  font-family: "Roboto", sans-serif;
+}
+
 h1 {
   font-size: 3rem !important;
   font-weight: 700 !important;
@@ -8,6 +19,11 @@ h1 {
   font-weight: 700 !important;
 }
 
+p {
+  font-size: 1.6rem;
+  font-family: "Roboto", sans-serif;
+}
+
 /* Button Colours */
 html {
   font-size: 10px;
@@ -15,6 +31,11 @@ html {
 
 html, body, #root {
   height: 100% !important;
+}
+
+.btn {
+  font-size: 1.6rem !important;
+  font-family: "Roboto", sans-serif !important;
 }
 
 .btn-main {
@@ -62,15 +83,11 @@ html, body, #root {
   width: 5rem;
 }
 
-@media screen and (max-width: 1000px) {
-  .dashboard-buttons {
-    grid-template-columns: repeat(2, 1fr);
-  }
-  .btn {
-    width: 100%;
-    min-width: 150px;
-  }
+.form-control {
+  border: 1px solid grey !important;
+  font-size: 1.6rem !important;
 }
+
 /* Button Colours */
 .dashboard {
   display: flex;
@@ -123,7 +140,51 @@ header {
   width: 10%;
 }
 
+/* Button Colours */
+.login {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 10rem;
+}
+
+.form-login {
+  width: 100%;
+  max-width: 400px;
+  height: 400px;
+  padding: 20px;
+  text-align: center;
+  border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.login-btn {
+  width: 100%;
+}
+
+.login-lead {
+  text-align: left;
+}
+
+.span-login {
+  margin: 0 0 0 0.5rem;
+}
+
+.form-login-check {
+  margin: 0 0 1rem 0;
+}
+
 @media screen and (max-width: 1000px) {
+  .dashboard-buttons {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .btn {
+    width: 100%;
+    min-width: 150px;
+  }
   .sidebar {
     display: none;
   }
