--- a/src/Styles/_partials/_typography.scss
+++ b/src/Styles/_partials/_typography.scss
@@ -1,3 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import "./variables";
+
+html, body {
+  font-family: 'Roboto', sans-serif;
+}
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 700 !important;
+  font-family: 'Roboto', sans-serif;
+}
+
 h1 {
     font-size: 3rem !important;
     font-weight: 700 !important;
@@ -6,3 +17,7 @@ h1 {
     font-size: 2rem !important;
     font-weight: 700 !important;
   }
+p {
+  font-size: $mercy-font-size-1;
+  font-family: 'Roboto', sans-serif;
+}
