--- a/src/Styles/mobile.scss
+++ b/src/Styles/mobile.scss
@@ -1,4 +1,14 @@
 @media screen and (max-width: 1000px) { 
+    // General
+    .dashboard-buttons {
+        grid-template-columns: repeat(2, 1fr);
+      }
+    
+    .btn {
+      width: 100%;
+      min-width: 150px;
+    }
+    // Sidebar
     .sidebar {
         display: none;
     }
