--- a/src/Styles/style.scss
+++ b/src/Styles/style.scss
@@ -1,6 +1,7 @@
 @import "./_partials/typography";
 @import "./_partials/general";
-@import "./_components/dashboard.scss";
-@import "./_components/navigation.scss";
-@import "./_components/sidebar.scss";
+@import "./_components/dashboard";
+@import "./_components/navigation";
+@import "./_components/sidebar";
+@import "./_components/login";
 @import "./mobile";
