--- a/src/Styles/_components/login.scss
+++ b/src/Styles/_components/login.scss
@@ -8,13 +8,20 @@
     margin-top: 10rem;
 }
 
+.col:has(.login-header) {
+ width: 100% !important;
+ max-width: 400px !important;
+}
+
+.login-header {
+    max-width: 400px;
+    width: 100%;
+}
+
 .form-login {
     width: 100%;
     max-width: 400px;
-    height: 400px;
-    padding: 20px;
     text-align: center;
-    border: 1px solid black;
     display: flex;
     flex-direction: column;
     justify-content: center;
