--- a/src/Styles/_partials/_general.scss
+++ b/src/Styles/_partials/_general.scss
@@ -56,3 +56,7 @@ html, body, #root {
   border: 1px solid grey !important;
   font-size: 1.6rem !important;
 }
+
+.login-text {
+  margin: 0 0 0 0 !important;
+}
