--- a/src/Styles/_partials/_general.scss
+++ b/src/Styles/_partials/_general.scss
@@ -5,6 +5,7 @@ html {
 }
 html, body, #root {
     height: 100% !important;
+
   }
 .btn {
   font-size: 1.6rem !important;
@@ -59,4 +60,7 @@ html, body, #root {
 
 .login-text {
   margin: 0 0 0 0 !important;
+}
+.small {
+  font-size: 1.2rem !important;
 }
