--- a/src/Styles/_compiled/login.css
+++ b/src/Styles/_compiled/login.css
@@ -19,7 +19,7 @@
 
 .form-login {
   width: 100%;
-  max-width: 400px;
+  max-width: 54.5rem;
   text-align: center;
   display: flex;
   flex-direction: column;
