--- a/src/Styles/_components/login.scss
+++ b/src/Styles/_components/login.scss
@@ -20,7 +20,7 @@
 
 .form-login {
     width: 100%;
-    max-width: 400px;
+    max-width: 54.5rem;
     text-align: center;
     display: flex;
     flex-direction: column;
