--- a/src/Styles/_compiled/style.css
+++ b/src/Styles/_compiled/style.css
@@ -204,6 +204,9 @@ header {
 }
 
 @media screen and (max-width: 1000px) {
+  .container-fluid {
+    padding: 0 2rem !important;
+  }
   .dashboard-buttons {
     grid-template-columns: repeat(2, 1fr);
   }
