feat: Add feature to redirect to dashboard or login page if jwt is not present

--- a/src/Styles/_compiled/style.css
+++ b/src/Styles/_compiled/style.css
@@ -29,8 +29,12 @@ html {
   font-size: 10px;
 }
 
-html, body, #root {
+html, body {
   height: 100% !important;
+}
+
+#root {
+  height: fit-content !important;
 }
 
 .btn {
