--- a/src/Styles/_partials/_general.scss
+++ b/src/Styles/_partials/_general.scss
@@ -3,10 +3,12 @@
 html {
     font-size: 10px;
 }
-html, body, #root {
+html, body {
     height: 100% !important;
-
-  }
+}
+#root {
+  height: fit-content !important;
+}
 .btn {
   font-size: 1.6rem !important;
   font-family: 'Roboto', sans-serif !important;
