--- a/src/Styles/_partials/_variables.scss
+++ b/src/Styles/_partials/_variables.scss
@@ -1,6 +1,6 @@
 // Global Colours
 $mercy-color-1: #0f9ed5;
-$mercy-color-2: #cfebf6;
+$mercy-color-2: #f8f9fc;
 
 // Font size
 $mercy-font-size-1: 1.6rem;
