--- a/src/Styles/_compiled/dashboard.css
+++ b/src/Styles/_compiled/dashboard.css
@@ -4,7 +4,6 @@
 }
 
 .dashboard-options {
-  border: 1px solid #0f9ed5;
   padding: 3rem;
   border-radius: 5px;
 }
@@ -15,15 +14,19 @@
 }
 
 .dashboard-tools {
+  border: 1px solid #d3d3d3;
+  box-shadow: 2px 2px 2px #d3d3d3;
   width: 100%;
   height: 100%;
-  background-color: #cfebf6;
+  background-color: #f8f9fc;
 }
 
 .dashboard-link {
+  border: 1px solid #d3d3d3;
+  box-shadow: 1px 1px 1px #d3d3d3;
   border-radius: 5px;
   width: 100%;
   height: 100%;
-  background-color: #cfebf6;
+  background-color: #f8f9fc;
   padding: 3rem;
 }/*# sourceMappingURL=dashboard.css.map */
