--- a/src/Styles/_compiled/style.css
+++ b/src/Styles/_compiled/style.css
@@ -29,14 +29,6 @@ html {
   font-size: 10px;
 }
 
-html, body {
-  height: 100% !important;
-}
-
-#root {
-  height: fit-content !important;
-}
-
 .btn {
   font-size: 1.6rem !important;
   font-family: "Roboto", sans-serif !important;
@@ -117,7 +109,6 @@ html, body {
 }
 
 .dashboard-options {
-  border: 1px solid #0f9ed5;
   padding: 3rem;
   border-radius: 5px;
 }
@@ -128,24 +119,31 @@ html, body {
 }
 
 .dashboard-tools {
+  border: 1px solid #d3d3d3;
+  box-shadow: 2px 2px 2px #d3d3d3;
   width: 100%;
   height: 100%;
-  background-color: #cfebf6;
+  background-color: #f8f9fc;
 }
 
 .dashboard-link {
+  border: 1px solid #d3d3d3;
+  box-shadow: 1px 1px 1px #d3d3d3;
   border-radius: 5px;
   width: 100%;
   height: 100%;
-  background-color: #cfebf6;
+  background-color: #f8f9fc;
   padding: 3rem;
 }
 
 /* Button Colours */
 header {
-  border-bottom: 1px solid #0f9ed5;
+  position: relative;
+  border-bottom: 1px solid #f8f9fc;
   padding-top: 2rem;
   padding-bottom: 2rem;
+  box-shadow: 2px 2px 2px #d3d3d3;
+  z-index: 100;
 }
 
 .navbar .nav-brand {
