--- a/src/Styles/_components/dashboard.scss
+++ b/src/Styles/_components/dashboard.scss
@@ -4,7 +4,6 @@
     display: flex;
   }
   .dashboard-options {
-    @include border(border);
     padding: 3rem;
     border-radius: 5px;
     &-buttons {
@@ -14,11 +13,15 @@
     }
   }
 .dashboard-tools {
+  border: 1px solid #d3d3d3;
+  box-shadow: 2px 2px 2px #d3d3d3;
     width: 100%;
     height: 100%;
     background-color: $mercy-color-2;
 }
 .dashboard-link {
+    border: 1px solid #d3d3d3;
+    box-shadow: 1px 1px 1px #d3d3d3;
     border-radius: 5px;
     width: 100%;
     height: 100%;
