--- a/src/Styles/_compiled/dashboard.css
+++ b/src/Styles/_compiled/dashboard.css
@@ -21,7 +21,7 @@
   background-color: #f8f9fc;
 }
 
-.dashboard-link {
+.dashboard-user {
   border: 1px solid #d3d3d3;
   box-shadow: 1px 1px 1px #d3d3d3;
   border-radius: 5px;
@@ -29,4 +29,16 @@
   height: 100%;
   background-color: #f8f9fc;
   padding: 3rem;
+}
+
+.dashboard-user-details {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.dashboard-user-details-image {
+  margin-right: 1rem;
+  background-color: grey;
+  width: 10rem;
+  height: 10rem;
 }/*# sourceMappingURL=dashboard.css.map */
