--- a/src/Styles/_compiled/style.css
+++ b/src/Styles/_compiled/style.css
@@ -126,7 +126,7 @@ html {
   background-color: #f8f9fc;
 }
 
-.dashboard-link {
+.dashboard-user {
   border: 1px solid #d3d3d3;
   box-shadow: 1px 1px 1px #d3d3d3;
   border-radius: 5px;
@@ -136,12 +136,23 @@ html {
   padding: 3rem;
 }
 
+.dashboard-user-details {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.dashboard-user-details-image {
+  margin-right: 1rem;
+  background-color: grey;
+  width: 10rem;
+  height: 10rem;
+}
+
 /* Button Colours */
 header {
   position: relative;
   border-bottom: 1px solid #f8f9fc;
   padding-top: 2rem;
-  padding-bottom: 2rem;
   box-shadow: 2px 2px 2px #d3d3d3;
   z-index: 100;
 }
@@ -149,6 +160,12 @@ header {
 .navbar .nav-brand {
   text-decoration: none;
   color: black;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.navbar .nav-brand .brand {
+  margin-right: 1rem;
 }
 
 /* Button Colours */
