--- a/src/Styles/_components/navigation.scss
+++ b/src/Styles/_components/navigation.scss
@@ -4,7 +4,6 @@ header {
     position: relative;
     border-bottom: 1px solid $mercy-color-2;
     padding-top: 2rem;
-    padding-bottom: 2rem;
     box-shadow: 2px 2px 2px #d3d3d3;
     z-index: 100;
 }
@@ -12,5 +11,11 @@ header {
     .nav-brand {
         text-decoration: none;
         color: black;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        .brand {
+            margin-right: 1rem;
+        }
     }
 }
