--- a/src/Styles/_partials/_typography.scss
+++ b/src/Styles/_partials/_typography.scss
@@ -21,3 +21,7 @@ p {
   font-size: $mercy-font-size-1;
   font-family: 'Roboto', sans-serif;
 }
+a {
+  font-size: $mercy-font-size-1;
+  font-family: 'Roboto', sans-serif;
+}
