--- a/src/Styles/_components/dashboard.scss
+++ b/src/Styles/_components/dashboard.scss
@@ -18,6 +18,7 @@
     width: 100%;
     height: 100%;
     background-color: $mercy-color-2;
+    padding: 2rem;
 }
 .dashboard-user {
     border: 1px solid #d3d3d3;
@@ -26,16 +27,27 @@
     width: 100%;
     height: 100%;
     background-color: $mercy-color-2;
-    padding: 3rem;
+    padding: 2rem;
+    &-details {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      &-image {
+        margin-right: 1rem;
+        background-color: grey;
+        width: 10rem; 
+          height: 10rem;
+      }
+    }
+    &-details-links {
+      .link-item {
+        display: flex;
+        justify-content: space-between;
+      }
+      .dashboard-calender {
+        display: flex;
+        flex-direction: column;
+      }
+    }
 }
-.dashboard-user-details {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  &-image {
-    margin-right: 1rem;
-    background-color: grey;
-      width: 10rem;
-      height: 10rem;
-  }
-}
+
