--- a/src/Styles/_components/navigation.scss
+++ b/src/Styles/_components/navigation.scss
@@ -17,5 +17,8 @@ header {
         .brand {
             margin-right: 1rem;
         }
+        h1 {
+            font-size: 3rem !important;
+        }
     }
 }
