--- a/src/Styles/_compiled/dashboard.css
+++ b/src/Styles/_compiled/dashboard.css
@@ -14,17 +14,16 @@
 }
 
 .dashboard-tools {
-  border: 1px solid #d3d3d3;
-  box-shadow: 2px 2px 2px #d3d3d3;
+  border: 2px solid #d3d3d3;
   width: 100%;
   height: 100%;
   background-color: #f8f9fc;
   padding: 2rem;
+  border-radius: 5px;
 }
 
 .dashboard-user {
-  border: 1px solid #d3d3d3;
-  box-shadow: 1px 1px 1px #d3d3d3;
+  border: 2px solid #d3d3d3;
   border-radius: 5px;
   width: 100%;
   height: 100%;
@@ -45,6 +44,9 @@
 .dashboard-user-details-links .link-item {
   display: flex;
   justify-content: space-between;
+}
+.dashboard-user-details-links .link-item a {
+  color: red;
 }
 .dashboard-user-details-links .dashboard-calender {
   display: flex;
