--- a/src/Styles/_compiled/style.css
+++ b/src/Styles/_compiled/style.css
@@ -43,23 +43,29 @@ html {
 .btn-main {
   width: 100%;
   height: 200px;
-  border-radius: 30px;
+  border-radius: 1rem;
   color: #000;
   background-color: transparent;
-  border: 1px solid #0f9ed5;
+  border: 1px solid grey;
   font-size: 22px;
   font-family: "Roboto", sans-serif;
   font-weight: 600;
   overflow-wrap: break-word;
   transition: 400ms ease-out;
   display: flex;
+  box-shadow: 0px 0px 7px grey;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: white;
 }
-
 .btn-main:hover {
   background-color: #0f9ed5;
+  color: #fff;
+}
+.btn-main:hover .btn-main-icon {
+  transition: 400ms ease-out;
+  filter: invert(100%) sepia(16%) saturate(0%) hue-rotate(107deg) brightness(108%) contrast(101%);
 }
 
 .btn-secondary {
@@ -68,7 +74,7 @@ html {
   border-radius: 10px;
   color: #000;
   background-color: transparent;
-  border: 1px solid #0f9ed5;
+  border: 1.5px solid #0f9ed5;
   font-size: 22px;
   font-family: "Roboto", sans-serif;
   font-weight: 600;
@@ -125,17 +131,16 @@ html {
 }
 
 .dashboard-tools {
-  border: 1px solid #d3d3d3;
-  box-shadow: 2px 2px 2px #d3d3d3;
+  border: 2px solid #d3d3d3;
   width: 100%;
   height: 100%;
   background-color: #f8f9fc;
   padding: 2rem;
+  border-radius: 5px;
 }
 
 .dashboard-user {
-  border: 1px solid #d3d3d3;
-  box-shadow: 1px 1px 1px #d3d3d3;
+  border: 2px solid #d3d3d3;
   border-radius: 5px;
   width: 100%;
   height: 100%;
@@ -156,6 +161,9 @@ html {
 .dashboard-user-details-links .link-item {
   display: flex;
   justify-content: space-between;
+}
+.dashboard-user-details-links .link-item a {
+  color: red;
 }
 .dashboard-user-details-links .dashboard-calender {
   display: flex;
@@ -188,7 +196,7 @@ header {
 /* Button Colours */
 .sidebar {
   width: 5%;
-  border-right: 1px solid #0f9ed5;
+  border-right: 1.5px solid #0f9ed5;
   transition: 500ms ease-out;
 }
 .sidebar:hover {
