--- a/src/Styles/_components/dashboard.scss
+++ b/src/Styles/_components/dashboard.scss
@@ -13,16 +13,15 @@
     }
   }
 .dashboard-tools {
-  border: 1px solid #d3d3d3;
-  box-shadow: 2px 2px 2px #d3d3d3;
+  border: 2px solid #d3d3d3;
     width: 100%;
     height: 100%;
     background-color: $mercy-color-2;
     padding: 2rem;
+    border-radius: 5px;
 }
 .dashboard-user {
-    border: 1px solid #d3d3d3;
-    box-shadow: 1px 1px 1px #d3d3d3;
+    border: 2px solid #d3d3d3;
     border-radius: 5px;
     width: 100%;
     height: 100%;
@@ -43,6 +42,9 @@
       .link-item {
         display: flex;
         justify-content: space-between;
+        a {
+          color: red;
+        }
       }
       .dashboard-calender {
         display: flex;
