--- a/src/Styles/_partials/_general.scss
+++ b/src/Styles/_partials/_general.scss
@@ -9,24 +9,31 @@ html {
   font-family: 'Roboto', sans-serif !important;
 }
 .btn-main {
-  width: 100%;
-  height: 200px;
-  border-radius: 30px;
-  color: #000;
-  background-color: transparent;
-  @include border(border);
-  font-size: 22px;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 600;
-  overflow-wrap: break-word;
-  transition: 400ms ease-out;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.btn-main:hover {
-  background-color: $mercy-color-1;
+    width: 100%;
+    height: 200px;
+    border-radius: 1rem;
+    color: #000;
+    background-color: transparent;
+    border: 1px solid grey;
+    font-size: 22px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 600;
+    overflow-wrap: break-word;
+    transition: 400ms ease-out;
+    display: flex;
+    box-shadow: 0px 0px 7px grey;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    &:hover {
+      background-color: $mercy-color-1;
+      color: #fff;
+    }
+    &:hover .btn-main-icon {
+      transition: 400ms ease-out;
+      filter: invert(100%) sepia(16%) saturate(0%) hue-rotate(107deg) brightness(108%) contrast(101%);
+    }
 }
 .btn-secondary {
   width: 100%;
