--- a/src/Styles/_components/navigation.scss
+++ b/src/Styles/_components/navigation.scss
@@ -8,6 +8,8 @@ header {
     z-index: 100;
 }
 .navbar {
+    flex-wrap: nowrap;
+    justify-content: space-between !important;
     .nav-brand {
         text-decoration: none;
         color: black;
