--- a/src/Styles/_compiled/style.css
+++ b/src/Styles/_compiled/style.css
@@ -179,6 +179,10 @@ header {
   z-index: 100;
 }
 
+.navbar {
+  flex-wrap: nowrap;
+  justify-content: space-between !important;
+}
 .navbar .nav-brand {
   text-decoration: none;
   color: black;
