style: Add navigation styles

--- a/src/Styles/_compiled/navigation.css
+++ b/src/Styles/_compiled/navigation.css
@@ -23,4 +23,21 @@ header {
 }
 .navbar .nav-brand h1 {
   font-size: 3rem !important;
+}
+
+.nav-item {
+  font-size: 1.6rem;
+}
+
+.nav-link {
+  color: grey !important;
+  font-weight: 600 !important;
+}
+.nav-link:hover {
+  color: #000 !important;
+}
+
+.nav-link.active, .nav-pills .show > .nav-link {
+  background-color: #0f9ed5 !important;
+  color: #fff !important;
 }/*# sourceMappingURL=navigation.css.map */
