--- a/src/Styles/_compiled/style.css
+++ b/src/Styles/_compiled/style.css
@@ -197,6 +197,23 @@ header {
   font-size: 3rem !important;
 }
 
+.nav-item {
+  font-size: 1.6rem;
+}
+
+.nav-link {
+  color: grey !important;
+  font-weight: 600 !important;
+}
+.nav-link:hover {
+  color: #000 !important;
+}
+
+.nav-link.active, .nav-pills .show > .nav-link {
+  background-color: #0f9ed5 !important;
+  color: #fff !important;
+}
+
 /* Button Colours */
 .sidebar {
   width: 5%;
