--- a/src/Styles/_compiled/dashboard.css
+++ b/src/Styles/_compiled/dashboard.css
@@ -12,14 +12,18 @@
   grid-template-columns: repeat(2, 1fr);
   gap: 20px;
 }
+.dashboard-options-buttons-link {
+  text-decoration: none;
+}
 
-.dashboard-tools {
+.dashboard-questions {
   border: 2px solid #d3d3d3;
   width: 100%;
   height: 100%;
   background-color: #f8f9fc;
   padding: 2rem;
   border-radius: 5px;
+  overflow-y: auto;
 }
 
 .dashboard-user {
