--- a/src/Styles/_components/dashboard.scss
+++ b/src/Styles/_components/dashboard.scss
@@ -10,15 +10,19 @@
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: 20px;
+        &-link {
+          text-decoration: none;
+        }
     }
   }
-.dashboard-tools {
+.dashboard-questions {
   border: 2px solid #d3d3d3;
     width: 100%;
     height: 100%;
     background-color: $mercy-color-2;
     padding: 2rem;
     border-radius: 5px;
+    overflow-y: auto;
 }
 .dashboard-user {
     border: 2px solid #d3d3d3;
