feat: Update questions

--- a/src/Styles/_compiled/dashboard.css
+++ b/src/Styles/_compiled/dashboard.css
@@ -55,4 +55,22 @@
 .dashboard-user-details-links .dashboard-calender {
   display: flex;
   flex-direction: column;
+}
+
+.questions-details {
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+  justify-content: space-between;
+}
+.questions-details-name {
+  display: flex;
+  align-items: center;
+  margin: 0 0 1rem 0;
+}
+.questions-details-name-img {
+  width: 5rem;
+  height: 5rem;
+  object-fit: cover;
+  margin: 0 0.7rem 0 0;
 }/*# sourceMappingURL=dashboard.css.map */
