--- a/src/Styles/_compiled/dashboard.css
+++ b/src/Styles/_compiled/dashboard.css
@@ -23,7 +23,8 @@
   background-color: #f8f9fc;
   padding: 2rem;
   border-radius: 5px;
-  overflow-y: auto;
+  overflow-y: scroll;
+  max-height: 700px;
 }
 
 .dashboard-user {
