--- a/src/Styles/_compiled/dashboard.css
+++ b/src/Styles/_compiled/dashboard.css
@@ -21,7 +21,7 @@
   width: 100%;
   height: 100%;
   background-color: #f8f9fc;
-  padding: 2rem;
+  padding: 0 2rem 2rem 2rem;
   border-radius: 5px;
   overflow-y: scroll;
   max-height: 700px;
@@ -74,4 +74,15 @@
   height: 5rem;
   object-fit: cover;
   margin: 0 0.7rem 0 0;
+}
+.questions-details p {
+  font-size: 1.4rem;
+}
+
+.dashboard-border {
+  position: sticky;
+  top: 0;
+  z-index: 999;
+  background-color: #f8f9fc;
+  padding: 20px 0 5px 0;
 }/*# sourceMappingURL=dashboard.css.map */
