--- a/src/Styles/_compiled/style.css
+++ b/src/Styles/_compiled/style.css
@@ -125,6 +125,10 @@ html {
   margin: 0;
 }
 
+.card-body p {
+  font-size: 1.4rem;
+}
+
 /* Button Colours */
 .dashboard {
   display: flex;
@@ -148,7 +152,7 @@ html {
   width: 100%;
   height: 100%;
   background-color: #f8f9fc;
-  padding: 2rem;
+  padding: 0 2rem 2rem 2rem;
   border-radius: 5px;
   overflow-y: scroll;
   max-height: 700px;
@@ -202,6 +206,18 @@ html {
   object-fit: cover;
   margin: 0 0.7rem 0 0;
 }
+.questions-details p {
+  font-size: 1.4rem;
+}
+
+.dashboard-border {
+  position: sticky;
+  top: 0;
+  z-index: 999;
+  background-color: #f8f9fc;
+  padding: 20px 0 5px 0;
+}
+
 /* Button Colours */
 header {
   position: relative;
