--- a/src/Styles/_components/dashboard.scss
+++ b/src/Styles/_components/dashboard.scss
@@ -20,7 +20,7 @@
     width: 100%;
     height: 100%;
     background-color: $mercy-color-2;
-    padding: 2rem;
+    padding: 0 2rem 2rem 2rem;
     border-radius: 5px;
     overflow-y: scroll;
     max-height: 700px;
@@ -73,7 +73,15 @@
       margin: 0 0.7rem 0 0;
     }
   }
-  &-posted {
-
+  p {
+    font-size: 1.4rem;
   }
+}
+
+.dashboard-border {
+position: sticky;
+top: 0;
+z-index: 999;
+background-color: #f8f9fc;
+padding:  20px 0 5px 0;
 }
