--- a/src/Styles/style.scss
+++ b/src/Styles/style.scss
@@ -4,4 +4,5 @@
 @import "./_components/navigation";
 @import "./_components/sidebar";
 @import "./_components/login";
+@import "./_partials/calender";
 @import "./mobile";
