--- a/src/Styles/_compiled/dashboard.css
+++ b/src/Styles/_compiled/dashboard.css
@@ -40,11 +40,22 @@
   flex-direction: row;
   align-items: center;
 }
+.dashboard-user-details p {
+  font-size: 1.8rem;
+}
 .dashboard-user-details-image {
   margin-right: 1rem;
   background-color: grey;
-  width: 10rem;
+  width: 8rem;
+  border: 1px solid black;
+  box-shadow: 0px 0px 7px grey;
+  border-radius: 3px;
   height: 10rem;
+}
+.dashboard-user-details-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 .dashboard-user-details-links .link-item {
   display: flex;
@@ -71,7 +82,9 @@
 }
 .questions-details-name-img {
   width: 5rem;
-  height: 5rem;
+  height: 6rem;
+  border: 1px solid black;
+  border-radius: 3px;
   object-fit: cover;
   margin: 0 0.7rem 0 0;
 }
