--- a/src/Styles/_components/dashboard.scss
+++ b/src/Styles/_components/dashboard.scss
@@ -36,11 +36,22 @@
       display: flex;
       flex-direction: row;
       align-items: center;
+      p {
+        font-size: 1.8rem;
+      }
       &-image {
         margin-right: 1rem;
         background-color: grey;
-        width: 10rem; 
+        width: 8rem; 
+        border: 1px solid black;
+        box-shadow: 0px 0px 7px grey;
+        border-radius: 3px;
           height: 10rem;
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+          }
       }
     }
     &-details-links {
@@ -68,7 +79,9 @@
     margin: 0 0 1rem 0;
     &-img {
       width: 5rem;
-      height: 5rem;
+      height: 6rem;
+      border: 1px solid black;
+      border-radius: 3px;
       object-fit: cover;
       margin: 0 0.7rem 0 0;
     }
