--- a/src/Styles/_components/navigation.scss
+++ b/src/Styles/_components/navigation.scss
@@ -5,7 +5,8 @@ header {
     border-bottom: 1px solid $mercy-color-2;
     padding-top: 2rem;
     box-shadow: 2px 2px 2px #d3d3d3;
-    z-index: 100;top: 0;
+    z-index: 10000;
+    top: 0;
     background-color: #fff;
 }
 .navbar {
