style: Update dashboard-questio section

--- a/src/Styles/mobile.scss
+++ b/src/Styles/mobile.scss
@@ -16,4 +16,8 @@
     .sidebar {
         display: none;
     }
+    // Dashboard Options
+    .dashboard-options {
+      padding: 2rem 0;
+    }
 }
