--- a/src/Styles/_compiled/style.css
+++ b/src/Styles/_compiled/style.css
@@ -366,4 +366,7 @@ header {
   .sidebar {
     display: none;
   }
+  .dashboard-options {
+    padding: 1rem 0;
+  }
 }/*# sourceMappingURL=style.css.map */
