--- a/src/Styles/style.scss
+++ b/src/Styles/style.scss
@@ -4,5 +4,6 @@
 @import "./_components/navigation";
 @import "./_components/sidebar";
 @import "./_components/login";
+@import "./_components/get-help.scss";
 @import "./_partials/calender";
 @import "./mobile";
