--- a/src/Styles/_compiled/style.css
+++ b/src/Styles/_compiled/style.css
@@ -101,9 +101,19 @@ html {
   color: #fff !important;
 }
 
+.btn-sm {
+  font-size: 1.4rem !important;
+}
+
+.btn-info {
+  background-color: #0f9ed5 !important;
+  font-weight: 600 !important;
+  color: #fff !important;
+}
+
 .form-control {
   border: 1px solid grey !important;
-  font-size: 1.6rem !important;
+  font-size: 1.4rem !important;
 }
 
 .login-text {
@@ -139,6 +149,10 @@ html {
 .question-actions-button {
   margin: 0 2rem 0 0;
   margin-bottom: 1rem;
+}
+
+a {
+  text-decoration: none !important;
 }
 
 /* Button Colours */
@@ -341,6 +355,39 @@ header {
 
 .form-login-check {
   margin: 0 0 1rem 0;
+}
+
+/* Button Colours */
+.get-help {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.get-help-img {
+  width: 5rem;
+  height: 6rem;
+  border: 1px solid black;
+  box-shadow: 0px 0px 7px grey;
+  border-radius: 3px;
+  object-fit: cover;
+  margin-right: 1rem;
+}
+
+.get-help-details {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 5rem;
+}
+
+.get-help-item {
+  box-shadow: 0px 5px 4px lightgrey;
+  transition: 350ms ease-out;
+}
+.get-help-item:hover {
+  background-color: #0f9ed5;
+  color: #fff;
+  transition: 350ms ease-out;
 }
 
 .react-calendar {
