--- a/src/Styles/_partials/_general.scss
+++ b/src/Styles/_partials/_general.scss
@@ -87,7 +87,7 @@ html {
 }
 .form-registration {
   .row {
-    .col-lg-6, .col {
+    .col-lg-6, .col-lg-12, .col {
       display: flex;
       flex-direction: column;
       justify-content: end;
