--- a/src/Styles/_compiled/dashboard.css
+++ b/src/Styles/_compiled/dashboard.css
@@ -1,6 +1,7 @@
 /* Button Colours */
 .dashboard {
   display: flex;
+  margin-bottom: 4rem;
 }
 
 .dashboard-options {
@@ -24,7 +25,7 @@
   padding: 0 2rem 2rem 2rem;
   border-radius: 5px;
   overflow-y: scroll;
-  max-height: 700px;
+  max-height: 70rem;
 }
 
 .dashboard-user {
@@ -32,6 +33,7 @@
   border-radius: 5px;
   width: 100%;
   height: 100%;
+  max-height: 70rem;
   background-color: #f8f9fc;
   padding: 2rem;
 }
