--- a/src/Styles/_components/dashboard.scss
+++ b/src/Styles/_components/dashboard.scss
@@ -2,6 +2,7 @@
 
 .dashboard {
     display: flex;
+    margin-bottom: 4rem;
   }
   .dashboard-options {
     padding: 3rem;
@@ -23,13 +24,14 @@
     padding: 0 2rem 2rem 2rem;
     border-radius: 5px;
     overflow-y: scroll;
-    max-height: 700px;
+    max-height: 70rem;
 }
 .dashboard-user {
     border: 2px solid #d3d3d3;
     border-radius: 5px;
     width: 100%;
     height: 100%;
+    max-height: 70rem;
     background-color: $mercy-color-2;
     padding: 2rem;
     &-details {
