--- a/src/Styles/_compiled/style.css
+++ b/src/Styles/_compiled/style.css
@@ -124,7 +124,7 @@ html {
   font-size: 1.2rem !important;
 }
 
-.form-registration .row .col-lg-6, .form-registration .row .col-lg-12, .form-registration .row .col {
+.form-registration .row .col-lg-6, .form-registration .row .col {
   display: flex;
   flex-direction: column;
   justify-content: end;
