feat: Fix dashboard

--- a/src/Styles/_compiled/dashboard.css
+++ b/src/Styles/_compiled/dashboard.css
@@ -27,6 +27,9 @@
   overflow-y: scroll;
   max-height: 70rem;
 }
+.dashboard-questions-items .card .card-body {
+  padding: 15px 15px 5px 15px !important;
+}
 
 .dashboard-user {
   border: 2px solid #d3d3d3;
@@ -47,7 +50,6 @@
 }
 .dashboard-user-details-image {
   margin-right: 1rem;
-  background-color: grey;
   width: 8rem;
   border: 1px solid black;
   box-shadow: 0px 0px 7px grey;
@@ -76,11 +78,13 @@
   flex-direction: row;
   align-items: baseline;
   justify-content: space-between;
+  width: 100%;
 }
 .questions-details-name {
   display: flex;
   align-items: center;
   margin: 0 0 1rem 0;
+  width: 100%;
 }
 .questions-details-name-img {
   width: 5rem;
@@ -90,8 +94,19 @@
   object-fit: cover;
   margin: 0 0.7rem 0 0;
 }
+.questions-details-name-info {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+.questions-details-name-info .questions-details-posted {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
 .questions-details p {
   font-size: 1.4rem;
+  margin: 0;
 }
 
 .dashboard-border {
