--- a/src/Styles/_components/get-help.scss
+++ b/src/Styles/_components/get-help.scss
@@ -16,9 +16,9 @@
 }
 
 .get-help-details {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    // display: flex;
+    // align-items: center;
+    // justify-content: space-between;
     padding-top: 5rem;
 }
 
