--- a/src/Styles/_partials/_variables.scss
+++ b/src/Styles/_partials/_variables.scss
@@ -1,6 +1,7 @@
 // Global Colours
 $mercy-color-1: #0f9ed5;
 $mercy-color-2: #f8f9fc;
+$mercy-color-3: #d3d3d3;
 
 // Font size
 $mercy-font-size-1: 1.6rem;
