--- a/src/Styles/_partials/_general.scss
+++ b/src/Styles/_partials/_general.scss
@@ -148,6 +148,11 @@ a {
         cursor: pointer;
         width: 2.5rem;
         height: 2.5rem;
+        :hover {
+          filter: invert(13%) sepia(96%) saturate(6849%) hue-rotate(358deg) brightness(92%) contrast(117%);
+
+          ;
+        }
       }
     }
   }
