--- a/src/Styles/_compiled/style.css
+++ b/src/Styles/_compiled/style.css
@@ -214,6 +214,11 @@ a {
   text-decoration: underline !important;
 }
 
+.red {
+  color: red;
+  margin: 0;
+}
+
 /* Button Colours */
 .dashboard {
   display: flex;
