--- a/src/Styles/style.scss
+++ b/src/Styles/style.scss
@@ -6,4 +6,5 @@
 @import "./_components/login";
 @import "./_components/get-help.scss";
 @import "./_partials/calender";
+@import "./_components/questions.scss";
 @import "./mobile";
