--- a/src/Styles/_partials/_general.scss
+++ b/src/Styles/_partials/_general.scss
@@ -171,6 +171,16 @@ a {
   transition: 350ms ease-out;
 }
 
+.show {
+  display: block !important;
+  transition: 350ms ease-out;
+}
+
+.hide {
+  display: none !important;
+  transition: 350ms ease-out;
+}
+
 // Back Icon
 .back-icon {
   width: 1.5rem;
@@ -189,4 +199,18 @@ a {
 .red {
   color: red;
   margin: 0;
+}
+
+.question-icon-box {
+  text-align: right;
+}
+
+.question-icon {
+  text-align: right;
+  cursor: pointer;
+  width: 2.5rem;
+  height: 2.5rem;
+  :hover {
+    filter: invert(13%) sepia(96%) saturate(6849%) hue-rotate(358deg) brightness(92%) contrast(117%);
+  }
 }
