feat: Number of questions increase automatically

--- a/src/Styles/_components/questions.scss
+++ b/src/Styles/_components/questions.scss
@@ -7,3 +7,11 @@
 .question {
     max-width: 100rem;
 }
+
+.question-box {
+    padding: 1.5rem !important;
+}
+
+textarea[data-info="content"]{
+    background-color: $mercy-color-2;
+}
