--- a/src/Styles/_compiled/questions.css
+++ b/src/Styles/_compiled/questions.css
@@ -5,4 +5,12 @@
 
 .question {
   max-width: 100rem;
+}
+
+.question-box {
+  padding: 1.5rem !important;
+}
+
+textarea[data-info=content] {
+  background-color: #f8f9fc;
 }/*# sourceMappingURL=questions.css.map */
