--- a/src/Styles/_compiled/style.css
+++ b/src/Styles/_compiled/style.css
@@ -201,13 +201,16 @@ a {
 }
 
 .show {
+  position: relative;
   display: block !important;
-  transition: 350ms ease-out;
+  transition: 1000ms ease-in-out;
 }
 
 .hide {
+  position: absolute;
+  top: -200px;
   display: none !important;
-  transition: 350ms ease-out;
+  transition: 1000ms ease-in-out;
 }
 
 .back-icon {
@@ -231,13 +234,16 @@ a {
 
 .question-icon-box {
   text-align: right;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
 }
 
 .question-icon {
   text-align: right;
   cursor: pointer;
-  width: 2.5rem;
-  height: 2.5rem;
+  width: 2rem;
+  height: 2rem;
 }
 .question-icon :hover {
   filter: invert(13%) sepia(96%) saturate(6849%) hue-rotate(358deg) brightness(92%) contrast(117%);
@@ -534,6 +540,14 @@ abbr {
 
 .question {
   max-width: 100rem;
+}
+
+.question-box {
+  padding: 1.5rem !important;
+}
+
+textarea[data-info=content] {
+  background-color: #f8f9fc;
 }
 
 @media screen and (max-width: 1000px) {
