--- a/src/Styles/_compiled/style.css
+++ b/src/Styles/_compiled/style.css
@@ -214,12 +214,12 @@ a {
 }
 
 .back-icon {
-  width: 1.5rem;
-  height: 1.5rem;
+  width: 1.2rem;
+  height: 1.2rem;
 }
 
 .link-dark {
-  display: flex;
+  display: inline-block;
   align-items: center;
   width: fit-content;
 }
