--- a/src/Styles/_partials/_general.scss
+++ b/src/Styles/_partials/_general.scss
@@ -186,12 +186,12 @@ a {
 
 // Back Icon
 .back-icon {
-  width: 1.5rem;
-  height: 1.5rem;
+  width: 1.2rem;
+  height: 1.2rem;
 }
 
 .link-dark {
-  display: flex;
+  display: inline-block;
   align-items: center;
   width: fit-content;
   &:hover {
