--- a/src/Styles/_partials/_general.scss
+++ b/src/Styles/_partials/_general.scss
@@ -194,8 +194,9 @@ a {
   display: inline-block;
   align-items: center;
   width: fit-content;
+  text-decoration: underline !important;
   &:hover {
-    text-decoration: underline !important;
+    text-decoration: none !important;
   }
 }
 
@@ -218,5 +219,20 @@ a {
   height: 2rem;
   :hover {
     filter: invert(13%) sepia(96%) saturate(6849%) hue-rotate(358deg) brightness(92%) contrast(117%);
+  }
+}
+
+.breadcrumb-slash {
+  margin: 0 5px;
+}
+
+.link-blue {
+  display: inline-block;
+  align-items: center;
+  width: fit-content;
+  text-decoration: underline !important;
+  color: #0b5ed7 !important;
+  &:hover {
+    text-decoration: none !important;
   }
 }
