--- a/src/Styles/_partials/_general.scss
+++ b/src/Styles/_partials/_general.scss
@@ -236,3 +236,11 @@ a {
     text-decoration: none !important;
   }
 }
+
+// TinyMC
+.tox-statusbar__right-container {
+  display: none !important;
+}
+.tox-statusbar__path {
+  display: none !important;
+}
