feat: Add image and style

--- a/src/Styles/_components/questions.scss
+++ b/src/Styles/_components/questions.scss
@@ -15,3 +15,12 @@
 textarea[data-info="content"]{
     background-color: $mercy-color-2;
 }
+
+.question-image {
+    margin-bottom: 10px;
+    &-item {
+        width: 100px;
+        height: 100px;
+        object-fit: cover;
+    }
+}
