--- a/src/Styles/_partials/_general.scss
+++ b/src/Styles/_partials/_general.scss
@@ -89,6 +89,7 @@ html {
 }
 .small {
   font-size: 1.2rem !important;
+  font-family: 'Roboto', sans-serif;
 }
 .form-registration {
   .row {
@@ -224,6 +225,7 @@ a {
 
 .breadcrumb-slash {
   margin: 0 5px;
+  font-family: 'Roboto', sans-serif;
 }
 
 .link-blue {
