feat: Add image and style

--- a/src/Styles/_compiled/style.css
+++ b/src/Styles/_compiled/style.css
@@ -577,7 +577,7 @@ textarea[data-info=content] {
 }
 
 .question-image {
-  margin-bottom: 10px;
+  margin-bottom: 1.5rem;
 }
 .question-image-item {
   width: 100px;
