--- a/src/Styles/_components/questions.scss
+++ b/src/Styles/_components/questions.scss
@@ -17,10 +17,14 @@ textarea[data-info="content"]{
 }
 
 .question-image {
-    margin-bottom: 10px;
+    margin-bottom: 1.5rem;
     &-item {
         width: 100px;
         height: 100px;
         object-fit: cover;
     }
+}
+
+.tox.tox-tinymce {
+    height: 300px !important;
 }
