--- a/src/Styles/_compiled/questions.css
+++ b/src/Styles/_compiled/questions.css
@@ -16,10 +16,14 @@ textarea[data-info=content] {
 }
 
 .question-image {
-  margin-bottom: 10px;
+  margin-bottom: 1.5rem;
 }
 .question-image-item {
   width: 100px;
   height: 100px;
   object-fit: cover;
+}
+
+.tox.tox-tinymce {
+  height: 300px !important;
 }
