fix: Broken images if no image string exists

--- a/src/Styles/_compiled/navigation.css
+++ b/src/Styles/_compiled/navigation.css
@@ -42,4 +42,4 @@ header {
 .nav-link.active, .nav-pills .show > .nav-link {
   background-color: #0f9ed5 !important;
   color: #fff !important;
-}/*# sourceMappingURL=navigation.css.map */
+}
