--- a/src/Styles/_partials/_general.scss
+++ b/src/Styles/_partials/_general.scss
@@ -1,9 +1,7 @@
-@import './variables';
-
 html {
     font-size: 10px;
     font-family: 'Roboto', sans-serif !important;
-}
+}s
 .btn {
   font-size: 1.6rem !important;
   font-family: 'Roboto', sans-serif !important;
@@ -238,6 +236,8 @@ a {
     text-decoration: none !important;
   }
 }
+
+
 
 // TinyMC
 .tox-statusbar__right-container {
