--- a/src/Styles/style.scss
+++ b/src/Styles/style.scss
@@ -1,3 +1,4 @@
+@import './_partials/variables';
 @import "./_partials/typography";
 @import "./_partials/general";
 @import "./_components/dashboard";
