fix: Broken images if no image string exists

--- a/src/Styles/_compiled/style.css
+++ b/src/Styles/_compiled/style.css
@@ -267,6 +267,10 @@ a {
   text-decoration: none !important;
 }
 
+.root {
+  margin-bottom: 6rem;
+}
+
 .tox-statusbar__right-container {
   display: none !important;
 }
