--- a/src/Styles/_compiled/style.css
+++ b/src/Styles/_compiled/style.css
@@ -1,6 +1,5 @@
 /* Button Colours */
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-/* Button Colours */
 html, body {
   font-family: "Roboto", sans-serif;
 }
@@ -27,6 +26,10 @@ p {
 
 a {
   font-size: 1.6rem;
+  font-family: "Roboto", sans-serif;
+}
+
+div {
   font-family: "Roboto", sans-serif;
 }
 
@@ -140,7 +143,7 @@ s .btn {
   margin: 0;
 }
 
-.card-body p {
+.card-body div, .card-body p {
   font-size: 1.4rem;
 }
 
